Fix dark mode styling (#51)
* fix: update pre style for issue #50

* fix: attach inactive_tag to blog tags for issue #49

--- a/statics/input.css
+++ b/statics/input.css
@@ -38,7 +38,7 @@
     }
 
     pre {
-        @apply overflow-x-auto my-1 px-4 text-wrap rounded border-solid border-2 border-gray-500 bg-nord;
+        @apply overflow-x-auto my-1 px-4 text-wrap rounded border-solid border-2 border-gray-500 bg-nord dark:bg-slate-900;
     }
 
     table {
